# s3_bucket_download

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: errors.rs  main.rs
src/config/: mod.rs
src/models/: mod.rs  s3_client.rs
src/services/: mod.rs  s3_bucket_downloader.rs
