[package]
name = "s3-download"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.46.0"
rusoto_signature = "0.46.0"
tokio = { version = "1.5.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
anyhow = "1.0.40"
thiserror = "1.0.24"
async-recursion = "0.3.2"